# resource-tuner

./: .gitignore  Android.bp  AppConfigs_8h_source.html  AuxRoutines_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  ClientDataManager_8h_source.html  ClientEndpoint_8h_source.html  ClientGarbageCollector_8h.html  ClientGarbageCollector_8h_source.html  CocoTable_8h.html  CocoTable_8h_source.html  Common_8h_source.html  ComponentRegistry_8h_source.html  ConfigProcessor_8h_source.html  CoreAPIsExamples_8c-example.html  CoreAPIsExamples_8c_source.html  CoreAPIsExamples_8cpp-example.html  CoreAPIsExamples_8cpp_source.html  DLManager_8h_source.html  ErrCodes_8h.html  ErrCodes_8h_source.html  ExtFeaturesRegistry_8h_source.html  Ext_Feature_Configs-example.html  Extensions_8h.html  Extensions_8h.js  Extensions_8h_source.html  Init_Configs-example.html  Logger_8h_source.html  MemoryPool_8h.html  MemoryPool_8h_source.html  Message_8h_source.html  OrderedQueue_8h_source.html  Plugin_8cpp-example.html  Plugin_8cpp_source.html  PropertiesRegistry_8h_source.html  Properties_Configs-example.html  PulseMonitor_8h.html  PulseMonitor_8h_source.html  README.md  (+347 more)
Core/Modula/: CMakeLists.txt
Core/Modula/Common/: Message.cpp  Request.cpp  Resource.cpp  Signal.cpp  SysConfig.cpp
Core/Modula/Components/: DLManager.cpp  Logger.cpp  MemoryPool.cpp  OrderedQueue.cpp  ThreadPool.cpp  Timer.cpp  YamlParser.cpp
Core/Modula/CoreModules/: AuxRoutines.cpp  ComponentRegistry.cpp  RequestReceiver.cpp  ResourceTunerSettings.cpp
Core/Server/Receiver/: CMakeLists.txt  RequestReceiver.cpp
Core/Server/SysConfigs/: Android.bp  CMakeLists.txt  SysConfigProcessor.cpp  SysConfigPropRegistry.cpp
Signals/: Android.bp  CMakeLists.txt  ConfigProcessor.cpp  ExtFeaturesConfigProcessor.cpp  ExtFeaturesRegistry.cpp  SignalConfigProcessor.cpp  SignalExtFeatureMapper.cpp  SignalInit.cpp  SignalQueue.cpp  SignalRegistry.cpp  SignalServer.cpp  SignalServerRequests.cpp
Signals/Configs/: ExtFeaturesConfig.yaml  SignalConfigs.yaml  SignalsConfig.yaml
Signals/Include/: ConfigProcessor.h  ExtFeaturesRegistry.h  SignalConfigProcessor.h  SignalExtFeatureMapper.h  SignalInternal.h  SignalQueue.h  SignalRegistry.h  SignalServerPrivate.h
Signals/include/: ExtFeaturesConfigProcessor.h  SignalQueue.h  SignalRegistry.h  SignalServerPrivate.h  SysSignalsInternal.h
Tests/Unit/: CMakeLists.txt
Tests/Unit/Auxiliary/: MiscTests.cpp
Tests/Unit/Core/: ClientDataManagerTests.cpp  CocoTableTest.cpp  ExtensionIntfTests.cpp  InitConfigParsingTests.cpp  MemoryPoolTests.cpp  MiscTests.cpp  RateLimiterTests.cpp  RequestMapTests.cpp  RequestQueueTest.cpp  RequestQueueTests.cpp  ResourceParsingTests.cpp  ResourceProcessorTests.cpp  SafeOpsTest.cpp  SysConfigAPITests.cpp  SysConfigProcessorTests.cpp  TargetConfigProcessorTests.cpp  TestUtils.h  ThreadPoolTests.cpp  TimerTest.cpp  YamlParserTests.cpp
Tests/Unit/Framework/: CocoTableTest.cpp  RateLimiterTests.cpp  ResourceProcessorTests.cpp  TargetConfigProcessorTests.cpp
Tests/Unit/Provisioner/: RateLimiterTests.cpp  RequestQueueTest.cpp  ResourceProcessorTests.cpp
Tests/Unit/Signals/: SignalConfigProcessorTests.cpp  SignalParsingTests.cpp
client/: CMakeLists.txt  ClientCLI.cpp
client/APIs/: ResourceTunerAPIs.cpp  UrmAPIs.cpp
client/APIs/Include/: UrmAPIs.h
contextual-classifier/: CMakeLists.txt  ContextualClassifier.cpp  ContextualClassifierInit.cpp  Extensions.cpp  FeatureExtractor.cpp  FeaturePruner.cpp  Inference.cpp  MLInference.cpp  NetLinkComm.cpp  PostProcess.cpp  PostProcessing.cpp  classifier.cpp  ml_inference.cpp  proc_tokenizer.cpp  process_scanner.cpp
contextual-classifier/Configs/: classifier-blocklist.txt
contextual-classifier/Include/: ContextualClassifier.h  Extensions.h  FeatureExtractor.h  FeaturePruner.h  Inference.h  MLInference.h  NetLinkComm.h  PostProcess.h  ml_inference.h
contextual-classifier/include/: parser.h
extensions-module/: CMakeLists.txt  PerApp.yaml  Plugin.cpp
extensions-module/src/: Plugin.cpp
plugins/: CMakeLists.txt
plugins/src/: Plugin.cpp
resource-tuner/: CMakeLists.txt  README.md  RestuneInit.cpp  ServerMain.cpp  StateDetector.cpp
resource-tuner/Core/: CMakeLists.txt
resource-tuner/Signals/: CMakeLists.txt  SignalConfigProcessor.cpp  SignalInit.cpp  SignalQueue.cpp  SignalRegistry.cpp  SignalServer.cpp
resource-tuner/Tests/: CMakeLists.txt
resource-tuner/core/: ClientGarbageCollector.cpp  CocoTable.cpp  PulseMonitor.cpp  RequestHandler.cpp  RequestManager.cpp  RequestQueue.cpp  ResourceHooks.cpp  ResourceRegistry.cpp  TargetRegistry.cpp
resource-tuner/extensions/: StateDetector.cpp
resource-tuner/init/: RestuneInit.cpp  RestuneParser.cpp
resource-tuner/signals/: AppConfigs.cpp  ExtFeaturesRegistry.cpp  SignalHandler.cpp  SignalRegistry.cpp
resource-tuner/tests/: CMakeLists.txt
server/: CMakeLists.txt
server/Receiver/: RequestReceiver.cpp
systune/: CMakeLists.txt  ServerMain.cpp  aarch64-toolchain.cmake
systune/Auxiliary/: CMakeLists.txt
systune/Client/: ClientCLI.cpp
systune/Configs/: propertiesConfigs.json  propertiesConfigs.yaml  resourceConfigs.json  resourceConfigs.yaml  signalConfigs.json  signalConfigs.yaml  targetConfigs.json  targetConfigs.yaml
systune/Examples/: ApiUsage.cpp  README.md  SystuneCoreAPIs.cpp
systune/Extensions/: CMakeLists.txt  Extensions.cpp
systune/Provisioner/: CMakeLists.txt  ClientGarbageCollector.cpp  CocoTable.cpp  PulseMonitor.cpp  RateLimiter.cpp  RequestManager.cpp  ResourceProcessor.cpp  ResourceRegistry.cpp  SyslockServerRequests.cpp  SyslocksServer.cpp  TargetConfigProcessor.cpp  TargetRegistry.cpp
systune/Server/: CMakeLists.txt
systune/Signals/: CMakeLists.txt  ExtFeaturesConfigProcessor.cpp  ExtFeaturesRegistry.cpp  SignalConfigProcessor.cpp  SignalRegistry.cpp  SignalServer.cpp  SignalServerRequests.cpp
systune/Tests/: pre_commit.py
systune/debian/: changelog  control  qcom-systune.postinst
systune/docs/: Doxyfile  README.md  mainpage.md  syslocks.md
systune/systemd/: qcom-systune.service
tests/contextual-classifier/: CMakeLists.txt
(+566 files in other folders)
