file(GLOB SOURCES "Components/*.cpp" "Common/*.cpp" "CoreModules/*.cpp")
add_library(Auxiliary ${SOURCES})
target_include_directories(Auxiliary PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Components/include)
target_include_directories(Auxiliary PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Common/include)
target_include_directories(Auxiliary PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/CoreModules/include)
target_link_libraries(Auxiliary jsoncpp)
