file(GLOB SOURCES "*.cpp")
add_library(SysRequestReceiver ${SOURCES})
set_target_properties(SysRequestReceiver PROPERTIES VERSION 1.0.0 SOVERSION 1)
target_link_libraries(SysRequestReceiver Auxiliary ResourceTunerCommunicationServer SysConfigProps)
target_include_directories(SysRequestReceiver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
